# msc_cruise_energy_lab

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
src/msc_cruise_energy_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/msc_energy_lab/: logging_config.py  paths.py  settings.py
src/msc_energy_lab/api/: app.py
src/msc_energy_lab/cli/: main.py
tests/: test_settings.py
