[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msc-cruise-energy-lab"
version = "0.1.0"
description = "Cruise vessel energy efficiency, emissions, and performance analytics lab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "polars>=1.8.0",
    "duckdb>=1.1.0",
    "pyarrow>=17.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.5.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "typer>=0.12.5",
    "pytest>=8.3.0",
    "jupyter>=1.1.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
